--- a/spa03.html
+++ b/spa03.html
@@ -18,7 +18,7 @@
     <title>Web AI DJ for Spotify</title>
 
     <!-- The website stylesheet -->
-    <link rel="stylesheet" href="/style.css" />
+ <!--   <link rel="stylesheet" href="/style.css" />   -->
   </head>
   <body>
     <audio id="player" controls autoplay>
@@ -115,7 +115,7 @@ By reading the user's conversation text, fill out the JSON object and respond wi
 
 
     
-    <script src="/script.js" type="module">
+    <script  type="module">
 
 /********************************************************************* 
  * Spotify Web AI DJ designed and coded by Jason Mayes 2025. 
