--- a/spa03.html
+++ b/spa03.html
@@ -130,9 +130,9 @@ By reading the user's conversation text, fill out the JSON object and respond wi
 
 import {KokoroTTS} from "https://cdn.jsdelivr.net/npm/kokoro-js@1.0.0/dist/kokoro.web.js";
 import {FilesetResolver, LlmInference} from 'https://cdn.jsdelivr.net/npm/@mediapipe/tasks-genai';
-import spotifyAPIHelper from '/spotifyLib.js';
-import fetchInChunks from '/fetchInChunks.js';
-import MD5 from '/fetchInChunks.js';
+import spotifyAPIHelper from './spotifyLib.js';
+import fetchInChunks from './fetchInChunks.js';
+import MD5 from './fetchInChunks.js';
 
 
 /**************************************************************
