--- a/spa03.html
+++ b/spa03.html
@@ -344,7 +344,7 @@ function playArtist(artistName) {
  * Web AI Gemma 2 LLM code.
  **************************************************************/
 const modelFileNameRemote = 'https://storage.googleapis.com/jmstore/WebAIDemos/models/Gemma2/gemma2-2b-it-gpu-int8.bin';
-const modelFileName = 'http://localhost/gemma2-2b-it-gpu-int8.bin';  should be a dowmload file name but CORS may have issues with that
+const modelFileName = 'http://localhost/gemma2-2b-it-gpu-int8.bin'; // should be a dowmload file name but CORS may have issues with that
 //const modelFileName = 'file:///C:/Users/keyfr/Downloads/gemma2-2b-it-gpu-int8.bin';
 
 
